GoalTracker/force-app/main/default/objects/Gift_Area_Entry__c/Gift_Area_Entry__c.object-meta.xml
<CustomObject>
    <label>Gift Area Entry</label>
    <nameField>
        <label>Gift Area Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gift Area Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>