GoalTracker/force-app/main/default/objects/Gift_Area_Entry__c/fields/Advance_Code__c.field-meta.xml
<CustomField>
    <fullName>Advance_Code__c</fullName>
    <formula>LL_Chart_of_Accounts__r.Advance_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance Code</label>
    <type>Text</type>
</CustomField>