GoalTracker/force-app/main/default/objects/Gift_Area_Entry__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alumni Groups</fullName>
            </value>
            <value>
                <fullName>Areas of Excellence</fullName>
            </value>
            <value>
                <fullName>Athletics</fullName>
            </value>
            <value>
                <fullName>Campuses, Colleges and Interdisciplinary Programs</fullName>
            </value>
            <value>
                <fullName>College of Engineering</fullName>
            </value>
            <value>
                <fullName>College of Fine Arts</fullName>
            </value>
            <value>
                <fullName>Dietrich College of Humanities and Social Sciences</fullName>
            </value>
            <value>
                <fullName>General Funds</fullName>
            </value>
            <value>
                <fullName>Heinz College</fullName>
            </value>
            <value>
                <fullName>Interdisciplinary Programs</fullName>
            </value>
            <value>
                <fullName>Mellon College of Science</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Funds</fullName>
            </value>
            <value>
                <fullName>Other Fund</fullName>
            </value>
            <value>
                <fullName>School of Computer Science</fullName>
            </value>
            <value>
                <fullName>Student &amp; Faculty Support</fullName>
            </value>
            <value>
                <fullName>Student Experience</fullName>
            </value>
            <value>
                <fullName>Tepper School of Business</fullName>
            </value>
            <value>
                <fullName>University Libraries</fullName>
            </value>
            <value>
                <fullName>Endowments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>