GoalTracker/force-app/main/default/objects/Gift_Area_Entry__c/fields/Direct_Link__c.field-meta.xml
<CustomField>
    <fullName>Direct_Link__c</fullName>
    <formula>&quot;http://uat-cmu.cs194.force.com/pmtx/giftselect?id=&quot; + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Link</label>
    <type>Text</type>
</CustomField>