GoalTracker/force-app/main/default/objects/Gift_Area_Entry__c/fields/Display_Online__c.field-meta.xml
<CustomField>
    <fullName>Display_Online__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display Online</label>
    <type>Checkbox</type>
</CustomField>