GoalTracker/force-app/main/default/objects/Gift_Area_Entry__c/fields/Featured__c.field-meta.xml
<CustomField>
    <fullName>Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to display this fund under as a featured fund on the gift area page.</description>
    <label>Featured</label>
    <type>Checkbox</type>
</CustomField>