GoalTracker/force-app/main/default/objects/Gift_Area_Entry__c/fields/Gift_Area__c.field-meta.xml
<CustomField>
    <fullName>Gift_Area__c</fullName>
    <label>Gift Area</label>
    <referenceTo>Gift_Area__c</referenceTo>
    <relationshipLabel>Gift Area Entries</relationshipLabel>
    <relationshipName>Gift_Area_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>