GoalTracker/force-app/main/default/objects/Gift_Area_Entry__c/fields/Gift_Page_Option__c.field-meta.xml
<CustomField>
    <fullName>Gift_Page_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift Page Option</label>
    <referenceTo>Gift_Page_Option__c</referenceTo>
    <relationshipLabel>Gift Area Entries</relationshipLabel>
    <relationshipName>Gift_Area_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>