GoalTracker/force-app/main/default/objects/Gift_Area_Entry__c/fields/Gift_to_be_Designated__c.field-meta.xml
<CustomField>
    <fullName>Gift_to_be_Designated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift to be Designated</label>
    <type>Checkbox</type>
</CustomField>