GoalTracker/force-app/main/default/objects/Gift_Area_Entry__c/fields/LL_Chart_of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>LL_Chart_of_Accounts__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>LL- Chart of Accounts</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>This fund is inactive or not available for display online.</errorMessage>
        <filterItems>
            <field>AQB__LLChartofAccounts__c.AQB__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>AQB__LLChartofAccounts__c.Display_Online__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AQB__LLChartofAccounts__c</referenceTo>
    <relationshipLabel>Gift Area Entries</relationshipLabel>
    <relationshipName>Gift_Area_Entries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>