GoalTracker/force-app/main/default/objects/Gift_Area_Entry__c/fields/LL_COA_Active__c.field-meta.xml
<CustomField>
    <fullName>LL_COA_Active__c</fullName>
    <formula>LL_Chart_of_Accounts__r.AQB__Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LL COA Active</label>
    <type>Checkbox</type>
</CustomField>