GoalTracker/force-app/main/default/objects/Gift_Area_Entry__c/fields/LL_COA_Display_Online__c.field-meta.xml
<CustomField>
    <fullName>LL_COA_Display_Online__c</fullName>
    <formula>LL_Chart_of_Accounts__r.Display_Online__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LL COA Display Online</label>
    <type>Checkbox</type>
</CustomField>