GoalTracker/force-app/main/default/objects/Gift_Area_Entry__c/fields/Search_Tags__c.field-meta.xml
<CustomField>
    <fullName>Search_Tags__c</fullName>
    <label>Search Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>