GoalTracker/force-app/main/default/objects/Gift_Area_Entry__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SCS Departmental Funds</fullName>
            </value>
            <value>
                <fullName>SCS Priority Funds</fullName>
            </value>
            <value>
                <fullName>SCS Academic Program Funds</fullName>
            </value>
            <value>
                <fullName>CFA General</fullName>
            </value>
            <value>
                <fullName>School of Architecture</fullName>
            </value>
            <value>
                <fullName>School of Art</fullName>
            </value>
            <value>
                <fullName>School of Design</fullName>
            </value>
            <value>
                <fullName>School of Drama</fullName>
            </value>
            <value>
                <fullName>School of Music</fullName>
            </value>
            <value>
                <fullName>Programs and Research Centers</fullName>
            </value>
            <value>
                <fullName>Engineering College-wide Funds</fullName>
            </value>
            <value>
                <fullName>Engineering Department Funds</fullName>
            </value>
            <value>
                <fullName>Engineering Program &amp; Institute Funds</fullName>
            </value>
            <value>
                <fullName>Engineering Campus Funds</fullName>
            </value>
            <value>
                <fullName>General Dietrich Gifts</fullName>
            </value>
            <value>
                <fullName>Departments</fullName>
            </value>
            <value>
                <fullName>Heinz Current Giving Priorities</fullName>
            </value>
            <value>
                <fullName>Heinz Industry Partners</fullName>
            </value>
            <value>
                <fullName>Heinz College Programs and Activities</fullName>
            </value>
            <value>
                <fullName>Mellon College of Science Funds</fullName>
            </value>
            <value>
                <fullName>Biological Sciences</fullName>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>Mathematical Sciences</fullName>
            </value>
            <value>
                <fullName>Physics</fullName>
            </value>
            <value>
                <fullName>Tepper School Priorities</fullName>
            </value>
            <value>
                <fullName>Tepper School Graduate Funds</fullName>
            </value>
            <value>
                <fullName>Tepper School Undergraduate Funds</fullName>
            </value>
            <value>
                <fullName>Programs, Centers and Activities</fullName>
            </value>
            <value>
                <fullName>Class Funds</fullName>
            </value>
            <value>
                <fullName>Corporate/Foundation Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>