GoalTracker/force-app/main/default/objects/Gift_Area_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Gift_Area__c</columns>
    <columns>Gift_Page_Option__c</columns>
    <columns>Active__c</columns>
    <columns>Display_Online__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Advance_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>