GoalTracker/force-app/main/default/objects/Gift_Area_Entry__c/listViews/Gift_Areas_with_Additional_Details.listView-meta.xml
<ListView>
    <fullName>Gift_Areas_with_Additional_Details</fullName>
    <columns>NAME</columns>
    <columns>Gift_Area__c</columns>
    <columns>Order_Number__c</columns>
    <columns>LL_Chart_of_Accounts__c</columns>
    <columns>Active__c</columns>
    <columns>Display_Online__c</columns>
    <columns>Featured__c</columns>
    <filterScope>Everything</filterScope>
    <label>Gift Areas with Additional Details</label>
</ListView>